-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.2
-
-
b2b4bc2f2 (dev), 4fe0e5dbc (6.8), 85c98b219 (6.7)
This is not something that can be consistently reproduced. Original reporter only saw it a few times randomly, and I myself haven't reproduced it even once yet.
So it is said that popping out a separate code editor by "Spilt" -> "Open in new window", moving new window to another screen, closing laptop lid (which is probably the same as turning off main screen) and opening lid again (which is probably the same as reconnecting main screen) may lead to crash. Trace attached.
- is duplicated by
-
QTBUG-114908 Crash when logging in after sleep
-
- Reported
-
-
QTCREATORBUG-31617 After unplug external monitor then switch to the builtin display, qtcreator crashed
-
- Closed
-
-
QTBUG-128360 Crash when closing MacBook lid while Qt Creator was full screen on second monitor
-
- Closed
-
For Gerrit Dashboard: QTBUG-127085 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
579994,2 | Icon engines: don't paint on a null-pixmap | dev | qt/qtbase | Status: MERGED | +2 | 0 |
580094,2 | Icon engines: don't paint on a null-pixmap | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
580127,2 | Icon engines: don't paint on a null-pixmap | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |