src/plugins/platforms/windows/qwindowsiconengine.cpp
@@ -353,8 +353,10 @@ QPixmap QWindowsIconEngine::scaledPixmap(const QSize &size, QIcon::Mode mode, QI
         m_pixmap.fill(Qt::transparent);
         m_pixmap.setDevicePixelRatio(scale);
 
-        QPainter painter(&m_pixmap);
-        paint(&painter, QRect(QPoint(), size), mode, state);
+        if (!m_pixmap.isNull()) {
+            QPainter painter(&m_pixmap);
+            paint(&painter, QRect(QPoint(), size), mode, state);
+        }
 
         m_cacheKey = cacheKey;
     }
